--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@ PORT=5000
 EMAIL_USER=edzesteducationservices@gmail.com
 EMAIL_PASS=nivxcqzvgshegdzj 
 EMAIL_TO=contact@edzest.org
-CORS_ORIGINS=https://website-backend2.onrender.com
+CORS_ORIGINS=https://edzestwebsite-1-1.onrender.com
 
