--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,6 @@ PORT=5000
 EMAIL_USER=edzesteducationservices@gmail.com
 EMAIL_PASS=nivxcqzvgshegdzj 
 EMAIL_TO=contact@edzest.org
-CORS_ORIGINS=https://edzestwebsite-1-1.onrender.com
+CORS_ORIGINS=https://edzest-websites.vercel.app,https://full-stack-mock-website.vercel.app
+
 
