--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-const REACT_API_URI="https://website-backend2.onrender.com" 
+const REACT_API_URI="https://edzest-websites.vercel.app,https://full-stack-mock-website.vercel.app" 
